Fix line height, gap + solution URL
Added solution URL to README. Fixed gaps and line-height + letter-spacing.

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ h2 {
 .ingredients-ul li:not(:first-child),
 .preparation-ul li,
 .instructions-ol li:not(:first-child) {
-  margin-top: 0.75rem;
+  margin-top: 0.5rem;
 }
 
 .preparation-ul li,
@@ -134,6 +134,11 @@ h2 {
 
 /* INSTRUCTIONS SECTION */
 
+.instructions-ol {
+  line-height: 1.4;
+  letter-spacing: 0.006rem;
+}
+
 /* NUTRITION SECTION */
 
 .nutrition-table {
@@ -143,7 +148,7 @@ h2 {
 }
 
 td {
-  padding: 0.75rem 1.5rem;
+  padding: 0.5rem 1.5rem;
   border-bottom: 0.063rem solid #e9ecef;
 }
 
